--- a/GAssist.Tizen.Wearable/GAssist.Tizen.Wearable.csproj
+++ b/GAssist.Tizen.Wearable/GAssist.Tizen.Wearable.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Tizen.NET" Version="6.0.0.14844" />
     <PackageReference Include="Tizen.NET.Sdk" Version="1.0.1" />
-    <PackageReference Include="Xamarin.Forms.Platform.Tizen" Version="2.5.1.444934" />
   </ItemGroup>
 
   <ItemGroup>
